--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
-<link href="https://fonts.googleapis.com/css?family=Nanum+Serif+KR" rel="stylesheet" type="text/css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
