--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -591,3 +591,15 @@ a.reversefootnote {
     position: static;
   }
 }
+
+/*
+   User Defined
+   ========================================================================== */
+.order-box {
+  color: white;
+  background-color: red;
+  margin-left:5px;
+  margin-right:5px;
+  padding-left:5px;
+  padding-right:5px;
+}
