--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -603,3 +603,12 @@ a.reversefootnote {
   padding-left:5px;
   padding-right:5px;
 }
+
+.grey-box {
+  color: white;
+  background-color: grey;
+  margin-left:2px;
+  margin-right:2px;
+  padding-left:2px;
+  padding-right:2px;
+}
