--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -605,9 +605,11 @@ a.reversefootnote {
 }
 
 .grey-box {
-  color: white;
-  background-color: grey;
+  color: rgb(0, 0, 0);
+  background-color: lightgrey;
   padding-left:5px;
   padding-right:5px;
+  padding-top:0px;
+  padding-bottom:0px;
   border-radius: $border-radius;
 }
