--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -606,7 +606,7 @@ a.reversefootnote {
 
 .grey-box {
   color: rgb(0, 0, 0);
-  background-color: lightgrey;
+  background-color: rgb(234, 234, 234);
   padding-left:5px;
   padding-right:5px;
   padding-top:0px;
